--- a/documentation/css/material-dashboard.css
+++ b/documentation/css/material-dashboard.css
@@ -60,7 +60,8 @@ hr {
 
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
-  margin-bottom: 0.5rem; }
+  margin-bottom: 0.5rem;
+font-size: small; }
 
 p {
   margin-top: 0;
