--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -1,10 +1,19 @@
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
+
 <div class="main-content">
   <div class="container-fluid">
+
+
       <div class="row">
+        <button mat-raised-button type="submit" class="btn btn-danger pull-right card-title"  data-toggle="modal" data-target="#ventanaForm" (click)="nuevoCurso()">AGG</button>
+
           <div class="col-md-12">
+
               <div class="card">
                   <div class="card-header card-header-danger">
-                      <h4 class="card-title ">Simple Table</h4>
+                      <h4 class="card-title disabled"> Menú</h4>
                       <p class="card-category"> Here is a subtitle for this table</p>
                   </div>
                   <div class="card-body">
@@ -15,262 +24,102 @@
                                       ID
                                   </th>
                                   <th>
-                                      Name
+                                      Tipo Menu
                                   </th>
                                   <th>
-                                      Country
+                                      Plato
                                   </th>
                                   <th>
-                                      City
+                                      Estado
                                   </th>
                                   <th>
-                                      Salary
-                                  </th>
+                                    Accion
+                                </th>
+                                  
                               </thead>
-                              <tbody>
-                                  <tr>
-                                      <td>
-                                          1
+                              <tbody  *ngFor="let item of platosss ">
+                                  <tr  >
+                                      <td >
+                                        {{item.id}}
+                                      </td>
+                                      <td >
+                                        {{item.id_tipomenu}}
                                       </td>
                                       <td>
-                                          Dakota Rice
+                                        {{item.descripcion}}
                                       </td>
                                       <td>
-                                          Niger
+                                        {{item.estado}}
                                       </td>
                                       <td>
-                                          Oud-Turnhout
-                                      </td>
-                                      <td class="text-primary">
-                                          $36,738
-                                      </td>
+                                        <button1 color="primary" (click)="editarPlato(item.id)">
+                                          <i class="material-icons" data-toggle="modal" data-target="#ventanaForm">edit</i>
+                                        </button1>
+                                     ---  <button2 > <i class="material-icons" (click)="eliminarPlato(item.id)" >delete</i></button2>
+                                    </td>
+                                    
                                   </tr>
-                                  <tr>
-                                      <td>
-                                          2
-                                      </td>
-                                      <td>
-                                          Minerva Hooper
-                                      </td>
-                                      <td>
-                                          Curaçao
-                                      </td>
-                                      <td>
-                                          Sinaai-Waas
-                                      </td>
-                                      <td class="text-primary">
-                                          $23,789
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td>
-                                          3
-                                      </td>
-                                      <td>
-                                          Sage Rodriguez
-                                      </td>
-                                      <td>
-                                          Netherlands
-                                      </td>
-                                      <td>
-                                          Baileux
-                                      </td>
-                                      <td class="text-primary">
-                                          $56,142
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td>
-                                          4
-                                      </td>
-                                      <td>
-                                          Philip Chaney
-                                      </td>
-                                      <td>
-                                          Korea, South
-                                      </td>
-                                      <td>
-                                          Overland Park
-                                      </td>
-                                      <td class="text-primary">
-                                          $38,735
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td>
-                                          5
-                                      </td>
-                                      <td>
-                                          Doris Greene
-                                      </td>
-                                      <td>
-                                          Malawi
-                                      </td>
-                                      <td>
-                                          Feldkirchen in Kärnten
-                                      </td>
-                                      <td class="text-primary">
-                                          $63,542
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td>
-                                          6
-                                      </td>
-                                      <td>
-                                          Mason Porter
-                                      </td>
-                                      <td>
-                                          Chile
-                                      </td>
-                                      <td>
-                                          Gloucester
-                                      </td>
-                                      <td class="text-primary">
-                                          $78,615
-                                      </td>
-                                  </tr>
+                                 
                               </tbody>
                           </table>
+
+
+                          
                       </div>
                   </div>
               </div>
           </div>
-          <div class="col-md-12">
-              <div class="card card-plain">
-                  <div class="card-header card-header-danger">
-                      <h4 class="card-title mt-0"> Table on Plain Background</h4>
-                      <p class="card-category"> Here is a subtitle for this table</p>
-                  </div>
-                  <div class="card-body">
-                      <div class="table-responsive">
-                          <table class="table table-hover">
-                              <thead class="">
-                                  <th>
-                                      ID
-                                  </th>
-                                  <th>
-                                      Name
-                                  </th>
-                                  <th>
-                                      Country
-                                  </th>
-                                  <th>
-                                      City
-                                  </th>
-                                  <th>
-                                      Salary
-                                  </th>
-                              </thead>
-                              <tbody>
-                                  <tr>
-                                      <td>
-                                          1
-                                      </td>
-                                      <td>
-                                          Dakota Rice
-                                      </td>
-                                      <td>
-                                          Niger
-                                      </td>
-                                      <td>
-                                          Oud-Turnhout
-                                      </td>
-                                      <td>
-                                          $36,738
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td>
-                                          2
-                                      </td>
-                                      <td>
-                                          Minerva Hooper
-                                      </td>
-                                      <td>
-                                          Curaçao
-                                      </td>
-                                      <td>
-                                          Sinaai-Waas
-                                      </td>
-                                      <td>
-                                          $23,789
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td>
-                                          3
-                                      </td>
-                                      <td>
-                                          Sage Rodriguez
-                                      </td>
-                                      <td>
-                                          Netherlands
-                                      </td>
-                                      <td>
-                                          Baileux
-                                      </td>
-                                      <td>
-                                          $56,142
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td>
-                                          4
-                                      </td>
-                                      <td>
-                                          Philip Chaney
-                                      </td>
-                                      <td>
-                                          Korea, South
-                                      </td>
-                                      <td>
-                                          Overland Park
-                                      </td>
-                                      <td>
-                                          $38,735
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td>
-                                          5
-                                      </td>
-                                      <td>
-                                          Doris Greene
-                                      </td>
-                                      <td>
-                                          Malawi
-                                      </td>
-                                      <td>
-                                          Feldkirchen in Kärnten
-                                      </td>
-                                      <td>
-                                          $63,542
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td>
-                                          6
-                                      </td>
-                                      <td>
-                                          Mason Porter
-                                      </td>
-                                      <td>
-                                          Chile
-                                      </td>
-                                      <td>
-                                          Gloucester
-                                      </td>
-                                      <td>
-                                          $78,615
-                                      </td>
-                                  </tr>
-                              </tbody>
-                          </table>
-                      </div>
-                  </div>
-              </div>
-          </div>
+          
       </div>
   </div>
 </div>
+
+
+
+
+  <!-- ventanaForm Modal -->
+  <div class="modal fade" id="ventanaForm" data-backdrop="static"  data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header heads">
+          <h5 class="modal-title" id="exampleModalLabel">{{tituloForm}}</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <form [formGroup]="menuForm">
+               
+             
+                <div class="form-group">
+                  <label for="inputAddress">Plato</label>
+                  <input type="text" class="form-control" id="inputAddress" placeholder="" formControlName="descripcion">
+                </div>
+               
+                <div class="form-row">
+                
+                  <div class="form-group col-md-4">
+                    <label for="inputState">Tipo Menu</label>
+                    <select id="inputState" class="form-control"  placeholder="Seleccione"  formControlName="id_tipomenu" (Change)="getId_Tipomenu()" >
+                      <option selected *ngFor="let item of tipomenusss "  [value]="item.id" >{{item.tipo}}</option>
+                     
+                    </select>
+                  </div>
+
+
+
+
+     
+
+                 
+                </div>
+             <input type="hidden" formControlName="funcion " >
+              </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+          <button type="button" class="btn btn-danger"  data-dismiss="modal" (click)="addMenu() " >Guardar</button>
+        </div>
+      </div>
+    </div>
+  </div>
