--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,8 @@
 <div class="main-content">
   <div class="container-fluid">
       <div class="row">
+
+
           <div class="col-lg-3 col-md-6 col-sm-6">
               <div class="card card-stats">
                   <div class="card-header card-header-warning card-header-icon">
@@ -15,7 +17,7 @@
                   <div class="card-footer">
                       <div class="stats">
                           <i class="material-icons text-danger">play_arrow</i>
-                          <a href="javascript:void(0)">Generarlo</a>
+                          <a href="javascript:void(0) " routerLink="/reportePolitecnico">Generarlo </a>
                       </div>
                   </div>
               </div>
@@ -24,50 +26,151 @@
               <div class="card card-stats">
                   <div class="card-header card-header-success card-header-icon">
                       <div class="card-icon">
-                          <i class="material-icons">store</i>
+                          <i class="material-icons">assignment_ind</i>
                       </div>
-                      <p class="card-category">Revenue</p>
-                      <h3 class="card-title">$34,245</h3>
+                      <p class="card-category">Generar </p>
+                      <h3 class="card-title">Listado de Usuarios
+                      <small>Administrador</small></h3>
                   </div>
                   <div class="card-footer">
                       <div class="stats">
-                          <i class="material-icons">date_range</i> Last 24 Hours
+                        <i class="material-icons text-danger">play_arrow</i>
+                        <a href="javascript:void(0) " routerLink="/listadoUsuarios">Generarlo </a>
                       </div>
                   </div>
               </div>
           </div>
+
+
           <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                  <div class="card-header card-header-danger card-header-icon">
-                      <div class="card-icon">
-                          <i class="material-icons">info_outline</i>
-                      </div>
-                      <p class="card-category">Fixed Issues</p>
-                      <h3 class="card-title">75</h3>
-                  </div>
-                  <div class="card-footer">
-                      <div class="stats">
-                          <i class="material-icons">local_offer</i> Tracked from Github
-                      </div>
-                  </div>
-              </div>
-          </div>
+            <div class="card card-stats">
+                <div class="card-header card-header-danger card-header-icon">
+                    <div class="card-icon">
+                        <i class="material-icons">info_outline</i>
+                    </div>
+                    <p class="card-category">Fixed Issues</p>
+                    <h3 class="card-title">75</h3>
+                </div>
+                <div class="card-footer">
+                    <div class="stats">
+                        <i class="material-icons">local_offer</i> Tracked from Github
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="card card-stats">
+                <div class="card-header card-header-info card-header-icon">
+                    <div class="card-icon">
+                        <i class="fa fa-twitter"></i>
+                    </div>
+                    <p class="card-category">Followers</p>
+                    <h3 class="card-title">+245</h3>
+                </div>
+                <div class="card-footer">
+                    <div class="stats">
+                        <i class="material-icons">update</i> Just Updated
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
           <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                  <div class="card-header card-header-info card-header-icon">
-                      <div class="card-icon">
-                          <i class="fa fa-twitter"></i>
-                      </div>
-                      <p class="card-category">Followers</p>
-                      <h3 class="card-title">+245</h3>
-                  </div>
-                  <div class="card-footer">
-                      <div class="stats">
-                          <i class="material-icons">update</i> Just Updated
-                      </div>
-                  </div>
-              </div>
-          </div>
+            <div class="card card-stats">
+                <div class="card-header card-header-secondary card-header-icon">
+                    <div class="card-icon">
+                        <i class="material-icons">assignment_ind</i>
+                    </div>
+                    <p class="card-category">Generar </p>
+                    <h3 class="card-title">Listado de Usuarios
+                    <small>Administrador</small></h3>
+                </div>
+                <div class="card-footer">
+                    <div class="stats">
+                      <i class="material-icons text-danger">play_arrow</i>
+                      <a href="javascript:void(0) " routerLink="/reportePolitecnico">Generarlo </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="card card-stats">
+                <div class="card-header card-header-success card-header-icon">
+                    <div class="card-icon">
+                        <i class="material-icons">assignment_ind</i>
+                    </div>
+                    <p class="card-category">Generar </p>
+                    <h3 class="card-title">Listado de Usuarios
+                    <small>Administrador</small></h3>
+                </div>
+                <div class="card-footer">
+                    <div class="stats">
+                      <i class="material-icons text-danger">play_arrow</i>
+                      <a href="javascript:void(0) " routerLink="/reportePolitecnico">Generarlo </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="card card-stats">
+                <div class="card-header card-header-success card-header-icon">
+                    <div class="card-icon">
+                        <i class="material-icons">assignment_ind</i>
+                    </div>
+                    <p class="card-category">Generar </p>
+                    <h3 class="card-title">Listado de Usuarios
+                    <small>Administrador</small></h3>
+                </div>
+                <div class="card-footer">
+                    <div class="stats">
+                      <i class="material-icons text-danger">play_arrow</i>
+                      <a href="javascript:void(0) " routerLink="/reportePolitecnico">Generarlo </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="card card-stats">
+                <div class="card-header card-header-success card-header-icon">
+                    <div class="card-icon">
+                        <i class="material-icons">assignment_ind</i>
+                    </div>
+                    <p class="card-category">Generar </p>
+                    <h3 class="card-title">Listado de Usuarios
+                    <small>Administrador</small></h3>
+                </div>
+                <div class="card-footer">
+                    <div class="stats">
+                      <i class="material-icons text-danger">play_arrow</i>
+                      <a href="javascript:void(0) " routerLink="/reportePolitecnico">Generarlo </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+         
+        
       </div>
       <div class="row">
           
@@ -82,12 +185,5 @@
 
       
   </div>
-  <div class="tamaño">
-    <img class="card-img" src="assets/img/toma2.jpg" alt="Card image">
-    <div class="card-img-overlay">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"></p>
-    </div>
-  </div>
+
 </div>
