--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,10 +1,10 @@
 <div class="main-content " >
   <div class="container-fluid ">
       <div class="row">
-          <div class="col-md-8 " >
+          <div class="col-md-12 " >
               <div class="card ">
-                  <div class="card-header card-header-danger">
-                      <h4 class="card-title disabled">Datos de Usuario  </h4>
+                  <div class="card-header card-header-danger" ><img src="assets/img/persona.png" alt="">
+                      <h4 class="card-title disabled">Datos de Usuario   </h4>
                       <p class="card-category">completa tu perfil</p>
                   </div>
                   <div class="card-body">
@@ -64,7 +64,7 @@
                             </div>
                             <div class="col-md-6">
                               <mat-form-field class="example-full-width">
-                                <input matInput placeholder="Contraseña" type="text" formControlName="contrasena">
+                                <input matInput placeholder="Contraseña" type="password" formControlName="contrasena">
                               </mat-form-field>
                             </div>
                            
