--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -7,14 +7,14 @@
 
 
       <div class="row">
-        <button mat-raised-button type="submit" class="btn btn-danger pull-right card-title"  data-toggle="modal" data-target="#ventanaForm" (click)="nuevoCurso()">AGG</button>
+        <button mat-raised-button type="submit" class="btn btn-danger pull-right card-title"  data-toggle="modal" data-target="#ventanaForm" (click)="nuevoCurso()">AGREGAR</button>
 
           <div class="col-md-12">
 
               <div class="card">
                   <div class="card-header card-header-danger">
-                      <h4 class="card-title disabled"> Menú</h4>
-                      <p class="card-category"> Here is a subtitle for this table</p>
+                      <h4 class="card-title disabled">  <img src="/assets/img/mn.png" class="edit" alt=""> M    E    N    U</h4>
+                     
                   </div>
                   <div class="card-body">
                       <div class="table-responsive">
@@ -80,14 +80,14 @@
   <!-- ventanaForm Modal -->
   <div class="modal fade" id="ventanaForm" data-backdrop="static"  data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header heads">
-          <h5 class="modal-title" id="exampleModalLabel">{{tituloForm}}</h5>
+      <div class="modal-content ">
+        <div class="modal-header heads " >
+          <h5 class="modal-title " id="exampleModalLabel" >{{tituloForm}}  <img src="assets/img/menuicono.png" alt=""></h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
+        <div class="modal-body " >
             <form [formGroup]="menuForm">
                
              
