--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -43,7 +43,7 @@
                                         {{item.id}}
                                       </td>
                                       <td >
-                                        {{item.id_tipomenu}}
+                                        {{item.tipo_menu.tipo}}
                                       </td>
                                       <td>
                                         {{item.descripcion}}
