--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -25,12 +25,12 @@
                               </div>
                               <div class="col-md-6">
                                 <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Email" type="text" formControlName="email">
+                                  <input matInput placeholder="Email" type="email" formControlName="email">
                                 </mat-form-field>
                               </div>
                               <div class="col-md-4">
                                 <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Teléfono" type="text" formControlName="telefono">
+                                  <input matInput placeholder="Teléfono" type="number" formControlName="telefono">
                                 </mat-form-field>
                               </div>
                               <div class="col-md-4">
