--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -35,10 +35,10 @@
                                 </th>
                                   
                               </thead>
-                              <tbody  *ngFor="let item of platosss ">
+                              <tbody  *ngFor="let item of platosss ;let i=index "  >
                                   <tr  >
                                       <td >
-                                        {{item.id}}
+                                        {{i+1}}
                                       </td>
                                       <td >
                                         {{item.tipo_menu.tipo}}
@@ -88,29 +88,22 @@
         <div class="modal-body " >
             <form [formGroup]="menuForm">
                
-             
+              <div class="form-row">
+                
+                <div class="form-group col-md-4">
+                  <label for="inputState">Tipo Menu</label>
+                  <select id="inputState" class="form-control"  placeholder="Seleccione"  formControlName="id_tipomenu" (Change)="getId_Tipomenu()" >
+                    <option selected *ngFor="let item of tipomenusss "  [value]="item.id" >{{item.tipo}}</option>
+                   
+                  </select>
+                </div>
+              </div>
                 <div class="form-group">
                   <label for="inputAddress">Plato</label>
                   <input type="text" class="form-control" id="inputAddress" placeholder="" formControlName="descripcion">
                 </div>
                
-                <div class="form-row">
-                
-                  <div class="form-group col-md-4">
-                    <label for="inputState">Tipo Menu</label>
-                    <select id="inputState" class="form-control"  placeholder="Seleccione"  formControlName="id_tipomenu" (Change)="getId_Tipomenu()" >
-                      <option selected *ngFor="let item of tipomenusss "  [value]="item.id" >{{item.tipo}}</option>
-                     
-                    </select>
-                  </div>
-
-
-
-
-     
-
-                 
-                </div>
+             
              <input type="hidden" formControlName="funcion " >
               </form>
         </div>
