--- a/src/app/table-list/table-list.component.css
+++ b/src/app/table-list/table-list.component.css
@@ -4,7 +4,18 @@ img{
 
 
 }
-
+.editable-row {
+    cursor: pointer;
+  }
+  
+  .editable-row:hover {
+    background-color: #ffffff;
+  }
+  
+  .edit-mode {
+    background-color: #ffffff;
+  }
+  
 .edit{
     height: 80px;
     width: 80px ; 
