--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,7 +17,7 @@
     <input type="submit" name="Login" value="Ingresar" class="login-submit" (click)="login()" />
     
   </form>
-  <a href="#" class="login-forgot-pass">forgot password?</a>
-  <div class="underlay-photo"> <img src="assets/img/toma1.jpg" alt=""></div>
+ 
+  <div class="underlay-photo "> </div>
   <div class="underlay-black"></div> 
   <router-outlet></router-outlet>  
